new bot for gitlab

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -103,6 +103,12 @@ deploy_prod:
 #    untracked: true
   script:
     - |
+      echo "####### First sync github"
+      URL="https://gesisnotebooks:"
+      URL+=$GH_TOKEN
+      URL+="@github.com/gesiscss/orc"
+      git push $URL master
+
       echo "####### Running deploy"
       mode="fetch_co"
       #pip3 install fabric==2.4.*
