deploy staging manually

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -89,7 +89,7 @@ deploy_staging:
     - staging
   tags:
     - orc
-  when: on_success
+  when: manual
   environment:
     name: staging
     url: https://notebooks-test.gesis.org/
