--- a/load_balancer/snippets/optimization.conf
+++ b/load_balancer/snippets/optimization.conf
@@ -5,6 +5,6 @@ proxy_buffers 32 32k;
 proxy_buffer_size 32k;
 # https://stackoverflow.com/questions/24453388/nginx-reverse-proxy-causing-504-gateway-timeout/36589120#36589120
 proxy_http_version 1.1;  # default is 1.0
-#proxy_connect_timeout 120s;  # default is 60s
-#proxy_send_timeout 120s;  # default is 60s
-#proxy_read_timeout 120s;  # default is 60s
+proxy_connect_timeout 120s;  # default is 60s
+proxy_send_timeout 120s;  # default is 60s
+proxy_read_timeout 120s;  # default is 60s
