--- a/gallery/cron_job.yaml
+++ b/gallery/cron_job.yaml
@@ -19,7 +19,7 @@ spec:
             base: worker  # where database is
           containers:
           - name: mybinder-archive-parser
-            image: gesiscss/binder-gallery:d2b7379
+            image: gesiscss/binder-gallery:b731f87
             command: ["flask"]
             args: ["parse-mybinder-archives", "--with-description", "mybinder"]
             ports:
@@ -34,12 +34,12 @@ spec:
               value:  "/gallery/"
             - name: BG_APPLICATION_SETTINGS
               value:  "gallery_config.Config"
-            - name: PRODUCTION_SERVER
-              value: "true"
+#            - name: PRODUCTION_SERVER
+#              value: "true"
             volumeMounts:
             - name: gallery-config
               mountPath: /binder_gallery/gallery_config.py
-              subPath: _secret_config.py
+              subPath: _secret_config_test.py
               readOnly: true
           volumes:
           - name: gallery-config
