--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -43,6 +43,7 @@ binderhub:
       #    config:
       #      quota: 200
     BinderHub:
+      pod_quota: 200
       base_url: /binder/
       use_registry: true
       build_image: jupyter/repo2docker:9c559d2a
