--- a/gesishub/gesishub/templates/hub-configmap.yaml
+++ b/gesishub/gesishub/templates/hub-configmap.yaml
@@ -9,3 +9,15 @@ metadata:
     release: {{ .Release.Name }}
 data:
   {{- (.Files.Glob "files/etc/jupyterhub/templates/*").AsConfig | nindent 2 }}
+---
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: hub-templates-gesis
+  labels:
+    app: jupyterhub
+    component: etc-jupyterhub
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
+data:
+  {{- (.Files.Glob "files/etc/jupyterhub/templates/gesis/*").AsConfig | nindent 2 }}
