--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -51,7 +51,7 @@ binderhub:
       pod_quota: 200
       base_url: /binder/
       use_registry: true
-      build_image: jupyter/repo2docker:0.10.0-17.g82cd28d.dirty
+      build_image: jupyter/repo2docker:0.10.0-49.g57919b9
       build_node_selector:
         user: worker
       per_repo_quota: 100
