--- a/gallery/cron_job.yaml
+++ b/gallery/cron_job.yaml
@@ -3,8 +3,10 @@ kind: CronJob
 metadata:
   name: mybinder-archive-parser
 spec:
-  # run every day every hour (in UTC)
-  schedule: "0 * * * *"
+  # run every day every hour between 6 am and 9 pm (in UTC)
+  # don't run it around midnight (UTC), it looks like some events are inserted later
+  # and our script starts parsing after last saved event and misses those events which are inserted later
+  schedule: "0 6-21 * * *"
   # Setting a limit to 0 corresponds to keeping none of the corresponding kind of jobs after they finish.
   successfulJobsHistoryLimit: 0
   failedJobsHistoryLimit: 70
