--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -51,7 +51,7 @@ binderhub:
       pod_quota: 200
       base_url: /binder/
       use_registry: true
-      build_image: jupyter/repo2docker:0.10.0-80.g2ee3230
+      build_image: jupyter/repo2docker:0.10.0-83.g27eeef2
       build_node_selector:
         user: worker
       per_repo_quota: 100
