deploy nginx on success

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -161,7 +161,8 @@ deploy_nginx:
     - master
   tags:
     - orc
-  when: manual
+  when: on_success
+#  when: manual
   allow_failure: false
   dependencies: []
   retry: 1
