--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -28,8 +28,6 @@ jupyterhub:
       minAvailable: 0
     nodeSelector:
       base: worker  # where database is
-    deploymentStrategy:
-      type: RollingUpdate
     db:
       type: postgres
     extraVolumes:
@@ -44,16 +42,17 @@ jupyterhub:
         mountPath: /etc/jupyterhub/templates
       - name: hub-templates-gesis
         mountPath: /etc/jupyterhub/templates/gesis
+    authenticatePrometheus: false
+    redirectToServer: false
+    templatePaths:
+      - "/etc/jupyterhub/templates"
     extraConfig:
       011-orc: |
-        # c.JupyterHub.refresh_pre_spawn = True
-        c.JupyterHub.redirect_to_server = False
         if "cookie_options" in c.JupyterHub.tornado_settings:
           c.JupyterHub.tornado_settings["cookie_options"].update({"secure": True})
         else:
           c.JupyterHub.tornado_settings["cookie_options"] = dict(secure=True)
       021-templates: |
-        c.JupyterHub.template_paths = ['/etc/jupyterhub/templates']
         context = {
             'staging': staging,
             'production': production,
@@ -181,8 +180,6 @@ jupyterhub:
                 (r'/oauth_callback', self.callback_handler),
             ] + [(r'/logout', self.logout_handler)]
         GenericOAuthenticator.get_handlers = get_handlers
-      05-noAuthMetrics: |
-        c.JupyterHub.authenticate_prometheus = False
 
   proxy:
     pdb:
