shutdown server when user logs out

--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -44,6 +44,7 @@ jupyterhub:
         mountPath: /etc/jupyterhub/templates/gesis
     authenticatePrometheus: false
     redirectToServer: false
+    shutdownOnLogout: true
     templatePaths:
       - "/etc/jupyterhub/templates"
     extraConfig:
