--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -62,6 +62,13 @@ binderhub:
       # look at configmap for static files here https://discourse.jupyter.org/t/customizing-jupyterhub-on-kubernetes/1769/4?u=bitniks
       #extra_static_path: /etc/binderhub/custom/gesisbinder/static
       #extra_static_url_prefix: /extra_static/
+      appendix: |
+        USER root
+        ENV BINDER_URL={binder_url}
+        ENV PERSISTENT_BINDER_URL={persistent_binder_url}
+        ENV REPO_URL={repo_url}
+        ENV REF_URL={ref_url}
+        USER $NB_USER
 
   extraVolumes:
     - name: binder-templates
