--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -220,3 +220,25 @@ binderhub:
         enabled: false
       userPlaceholder:
         enabled: false
+
+imageCleaner:
+  enabled: false
+  image:
+    name: gesiscss/orc-image-cleaner
+    tag: ca9e36d
+  # start deleting images which are not used in x days
+  days: 7
+  # interval (in seconds) between cleaning processes
+  interval: 1800
+  # pat to check available disk space
+  path: /var/lib/docker
+  # delete an image at most every 5 seconds
+  delay: 5
+  # start cleaning when 80% of disk is used
+  # until it drops below 40%
+  highLimit: 80
+  lowLimit: 40
+  # cull images on the host docker
+  dockerSocket: /var/run/docker.sock
+  # dockerLibDir: /var/lib/docker
+  dockerLibDir: /ssd/docker
