--- a/gesisbinder/gesisbinder/templates/image-cleaner.yaml
+++ b/gesisbinder/gesisbinder/templates/image-cleaner.yaml
@@ -1,5 +1,4 @@
 {{ if .Values.imageCleaner.enabled -}}
-{{- $Values := .Values -}}
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
@@ -28,15 +27,10 @@ spec:
 #        key: hub.jupyter.org_dedicated
 #        operator: Equal
 #        value: user
-      nodeSelector: {{ toJson $Values.config.BinderHub.build_node_selector  }}
-
-      {{- if $Values.rbac.enabled }}
-      serviceAccountName: {{ .Release.Name }}-image-cleaner
-      {{- end }}
-
+      nodeSelector: {{ toJson .Values.config.BinderHub.build_node_selector  }}
       containers:
-      - name: image-cleaner-{{ $kind }}
-        image: {{ $Values.imageCleaner.image.name }}:{{ $Values.imageCleaner.image.tag }}
+      - name: image-cleaner-host
+        image: {{ .Values.imageCleaner.image.name }}:{{ .Values.imageCleaner.image.tag }}
         volumeMounts:
         - name: dockerlib-host
           mountPath: /var/lib/docker
@@ -44,26 +38,26 @@ spec:
           mountPath: /var/run/docker.sock
         env:
         - name: IMAGE_CLEANER_DAYS
-          value: {{ $Values.imageCleaner.days | quote }}
+          value: {{ .Values.imageCleaner.days | quote }}
         - name: IMAGE_CLEANER_INTERVAL
-          value: {{ $Values.imageCleaner.interval | quote }}
+          value: {{ .Values.imageCleaner.interval | quote }}
         - name: IMAGE_CLEANER_PREFIX
-          value: {{ $Values.config.BinderHub.image_prefix | quote }}
+          value: {{ .Values.config.BinderHub.image_prefix }}
         - name: IMAGE_CLEANER_PATH
-          value: {{ $Values.imageCleaner.path | quote }}
+          value: {{ .Values.imageCleaner.path }}
         - name: IMAGE_CLEANER_DELAY
-          value: {{ $Values.imageCleaner.delay | quote }}
+          value: {{ .Values.imageCleaner.delay | quote }}
         - name: IMAGE_CLEANER_HIGH
-          value: {{ $Values.imageCleaner.highLimit | quote }}
+          value: {{ .Values.imageCleaner.highLimit | quote }}
         - name: IMAGE_CLEANER_LOW
-          value: {{ $Values.imageCleaner.lowLimit | quote }}
+          value: {{ .Values.imageCleaner.lowLimit | quote }}
       terminationGracePeriodSeconds: 0
       volumes:
       - name: dockerlib-host
         hostPath:
-          path: {{ $Values.imageCleaner.dockerLibDir }}
+          path: {{ .Values.imageCleaner.dockerLibDir }}
       - name: dockersocket-host
         hostPath:
-          path: {{ $Values.imageCleaner.dockerSocket }}
+          path: {{ .Values.imageCleaner.dockerSocket }}
           type: Socket
 {{- end }}
