--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -45,6 +45,19 @@ jupyterhub:
     authenticatePrometheus: false
     redirectToServer: false
     shutdownOnLogout: true
+    templateVars:
+      version: beta
+      home_url: /
+      gesishub_url: /hub/
+      gesisbinder_url: /binder/
+      about_url: /about/
+      tou_url: /terms_of_use/
+      imprint_url: https://www.gesis.org/en/institute/imprint/
+      data_protection_url: https://www.gesis.org/en/institute/data-protection/
+      gesis_url: https://www.gesis.org/en/home/
+      gallery_url: /gallery/
+      #help_url: https://www.gesis.org/en/help/
+      active: hub
     templatePaths:
       - "/etc/jupyterhub/templates"
     extraConfig:
@@ -53,24 +66,6 @@ jupyterhub:
           c.JupyterHub.tornado_settings["cookie_options"].update({"secure": True})
         else:
           c.JupyterHub.tornado_settings["cookie_options"] = dict(secure=True)
-      021-templates: |
-        context = {
-            'staging': staging,
-            'production': production,
-            'version': 'beta',
-            'home_url': '/',
-            'gesishub_url': '/hub/',
-            'gesisbinder_url': '/binder/',
-            'about_url': '/about/',
-            'tou_url': '/terms_of_use/',
-            'imprint_url': 'https://www.gesis.org/en/institute/imprint/',
-            'data_protection_url': 'https://www.gesis.org/en/institute/data-protection/',
-            'gesis_url': 'https://www.gesis.org/en/home/',
-            'gallery_url': '/gallery/'
-            # 'help_url': 'https://www.gesis.org/en/help/',
-        }
-        context.update({'active': 'hub'})
-        c.JupyterHub.template_vars = context
       03-admin_handler: |
         from jupyterhub.handlers.base import BaseHandler
         from jupyterhub.utils import admin_only
@@ -150,8 +145,6 @@ jupyterhub:
         # https://github.com/jupyterhub/zero-to-jupyterhub-k8s/issues/886#issuecomment-470869625
         # https://github.com/InfuseAI/primehub/blob/master/helm/primehub/jupyterhub_primehub.py
         class KeycloakLogoutHandler(LogoutHandler):
-            kc_logout_url = 'https://login{}.gesis.org/realms/gesis/protocol/openid-connect/logout'.format('-test' if staging else '')
-            site_url = 'https://notebooks{}.gesis.org'.format('-test' if staging else '')
 
             async def render_logout_page(self):
                 """Render the logout page, if any
@@ -159,7 +152,8 @@ jupyterhub:
                 Override this function to set a custom logout page.
                 """
                 # after logout, redirect user to home page
-                self.redirect(self.site_url, permanent=False)
+                site_url = 'https://notebooks{}.gesis.org'.format('-test' if 'notebooks-test' in self.request.host else '')
+                self.redirect(site_url, permanent=False)
 
             async def get(self):
                 # redirect to keycloak logout url and redirect back with kc=true parameters
@@ -169,7 +163,8 @@ jupyterhub:
                     logout_url = self.request.full_url() + '?kc=true'
                     if not logout_url.startswith('https'):
                       logout_url = logout_url.replace('http', 'https', 1)
-                    self.redirect(self.kc_logout_url + '?' + urlencode({'redirect_uri': logout_url}))
+                    kc_logout_url = 'https://login{}.gesis.org/realms/gesis/protocol/openid-connect/logout'.format('-test' if 'notebooks-test' in self.request.host else '')
+                    self.redirect(kc_logout_url + '?' + urlencode({'redirect_uri': logout_url}))
                 else:
                     await super().get()
 
