--- a/gesisbinder/config.yaml
+++ b/gesisbinder/config.yaml
@@ -80,11 +80,11 @@ binderhub:
       chp:
         resources:
           requests:
-            cpu: "0.1"
-            memory: 256Mi
-          limits:
             cpu: "0.5"
             memory: 512Mi
+          limits:
+            cpu: "1"
+            memory: 1Gi
 
     singleuser:
       cpu:
