--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -52,7 +52,7 @@ binderhub:
       pod_quota: 200
       base_url: /binder/
       use_registry: true
-      build_image: jupyter/repo2docker:0.10.0-110.g2afb306
+      build_image: jupyter/repo2docker:0.10.0-112.g242107b
       build_node_selector:
         user: worker
       per_repo_quota: 100
