--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 0.2.0-c04966f
+   version: 0.1.0-456.7e32ac0
    repository: https://jupyterhub.github.io/helm-chart
