--- a/gesishub/gesishub/templates/hub-configmap.yaml
+++ b/gesishub/gesishub/templates/hub-configmap.yaml
@@ -21,3 +21,15 @@ metadata:
     release: {{ .Release.Name }}
 data:
   {{- (.Files.Glob "files/etc/jupyterhub/templates/gesis/*").AsConfig | nindent 2 }}
+---
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: hub-extra-config
+  labels:
+    app: jupyterhub
+    component: etc-jupyterhub
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
+data:
+  {{- (.Files.Get "files/etc/jupyterhub/orc.py").AsConfig | nindent 2 }}
