--- a/gesisbinder/config.yaml
+++ b/gesisbinder/config.yaml
@@ -30,6 +30,8 @@ binderhub:
     BinderHub:
       hub_url: https://notebooks.gesis.org/binder/jupyter/
       image_prefix: gesiscss/orc-binder-
+      # TODO maybe we can use this in the long run
+      #badge_base_url: https://mybinder.org
 
   extraConfig:
     # send binder events to mybinder.org's StackDriver on Google Cloud
