--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -73,10 +73,9 @@ jupyterhub:
         else:
           c.JupyterHub.tornado_settings["cookie_options"] = dict(secure=True)
 
-        from extra_config import OrcAdminHandler
+        from extra_config import OrcAdminHandler, KeycloakLogoutHandler
         c.JupyterHub.extra_handlers = [(r'/admin_orc', OrcAdminHandler),]
 
-        from orc import KeycloakLogoutHandler
         from oauthenticator.generic import GenericOAuthenticator
         GenericOAuthenticator.logout_handler = KeycloakLogoutHandler
         def get_handlers(self, app):
